--- a/stevens-college/index.html
+++ b/stevens-college/index.html
@@ -1,14 +1,26 @@
-<!-- Markup this content with HTML here -->
-[Page Title: Computer Software Engineering Technology]
+<!DOCTYPE html>
 
+<html lang="en">
+<head>
+  <meta charset="utf-8">
 
-Computer Software Engineering Technology
+  <title>Computer Software </title>
 
-[Image https://via.placeholder.com/500x300]
+  <link rel="stylesheet" href="styles.css">
 
-Schedule
-Faculty
-Tool List
+</head>
 
-Computers have become a major factor in the development and operation of the modern industry. From providing means of communications, to operating machines, to facilitating international commerce, to systems animation, computers and their related software programs makes things possible.
+<body>
+    <h1>COMPUTER SOFTWARE ENGINEERING TECHNOLOGY</h1>
 
+    <img src="https://via.placeholder.com/500x300" width="500" height="300">
+    <ul>
+        <li><a href="url">SCHEDULE</a></li>
+        <li><a href="url">FACULTY</a></li>
+        <li><a href="url">TOOL LIST</a></li>
+    </ul>
+    
+    <p>Computers have become a major factor in the development and operation of the modern industry. From providing means of communications, to operating machines, to facilitating international commerce, to systems animation, computers and their related software programs makes things possible.</p>
+    
+</body>
+</html>
